flex layout divided into sections

--- a/Girish/L1.css
+++ b/Girish/L1.css
@@ -5,31 +5,28 @@ header {
     font-size: 35px;
 }
 
-#parent-1 {
+#p-1 {
     display: flex;
 }
 
-#parent1-img1 {
-    flex: 1;
-    height: 500px;
-}
-
-#parent1-paragraph1 {
-    flex: 1;
-}
-
-#parent-2 {
-    display: flex;
-    justify-content: right;
-}
-
-#parent2-paragraph-2 {
+#infant-1 {
     flex: 7;
 }
 
-#parent2-img2 {
+#infant-2 {
     flex: 3;
-    height: 300px;
+}
+
+#p-2 {
+    display: flex;
+}
+
+#child-1 {
+    flex: 1;
+}
+
+#child-2 {
+    flex: 1;
 }
 
 footer {
