--- a/Girish/L1.css
+++ b/Girish/L1.css
@@ -1,35 +1,53 @@
 header {
+    display: flex;
     background-color: #ffffff;
     padding: 30px;
     text-align: center;
     font-size: 35px;
+    justify-content: center;
+    justify-content: space-between;
 }
 
-#parent-1 {
-    display: flex;
+#first {
+    width: 40px;
+    height: 40px;
+    justify-content: left;
 }
 
-#parent1-img1 {
-    flex: 1;
-    height: 500px;
+#heading {
+    color: yellow;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
 }
 
-#parent1-paragraph1 {
-    flex: 1;
-}
-
-#parent-2 {
-    display: flex;
+#second {
+    width: 40px;
+    height: 40px;
     justify-content: right;
 }
 
-#parent2-paragraph-2 {
+#p-1 {
+    display: flex;
+}
+
+#infant-1 {
     flex: 7;
 }
 
-#parent2-img2 {
+#infant-2 {
     flex: 3;
-    height: 300px;
+}
+
+#p-2 {
+    display: flex;
+}
+
+#child-1 {
+    flex: 1;
+}
+
+#child-2 {
+    flex: 1;
 }
 
 footer {
