--- a/Girish/L1.css
+++ b/Girish/L1.css
@@ -26,6 +26,15 @@ header {
     justify-content: right;
 }
 
+#p-1 {
+    display: flex;
+}
+
+#p-2 {
+    display: flex;
+    display: block;
+}
+
 footer {
     background-color: #ffffff;
     padding: 10px;
